force-app/main/default/objects/Airplane__c/fields/Airplane__c.field-meta.xml
<CustomField>
    <fullName>Airplane__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sfsafdf</description>
    <label>Airplane?</label>
    <type>Checkbox</type>
</CustomField>