force-app/main/default/objects/Airplane__c/fields/On_Time__c.field-meta.xml
<CustomField>
    <fullName>On_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if the plane is on time or not</description>
    <label>On Time?</label>
    <type>Checkbox</type>
</CustomField>