force-app/main/default/objects/Airplane__c/fields/Pilot_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Phone_Number__c</fullName>
    <label>Pilot Phone Number</label>
    <type>Phone</type>
</CustomField>