force-app/main/default/objects/Airplane__c/fields/Plane_Maker__c.field-meta.xml
<CustomField>
    <fullName>Plane_Maker__c</fullName>
    <description>The two plane makers</description>
    <label>Plane Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Boeing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>